--- a/app/views/games/show.html.erb
+++ b/app/views/games/show.html.erb
@@ -17,6 +17,8 @@
       <%= render 'helicopter' %>      
     <% when 'Sorcerer Game' %>
       <%= render 'sorcerer_m' %>
+    <% when '2048' %>
+      <%= render 'twentyfortyeight_m' %>      
   <% end %>
   
 <input type="hidden" id="game_token" name="game_token" value="<%= session[:game_token] %>" />
