--- a/app/views/games/index_mobile.html.erb
+++ b/app/views/games/index_mobile.html.erb
@@ -1,6 +1,6 @@
   <div class='game-list-container'>
       <% @games.each do | g | %>
-      <% next if g.name != 'Sorcerer Game'%>
+      <% next if g.device_type != 1 %>
        <%= link_to game_path(g) do %>
         <%= image_tag(g.image, :class=>'game-image') %>
        <% end %>
