Temporary fix for the navigation bug

--- a/app/views/layouts/mobile_application.html.erb
+++ b/app/views/layouts/mobile_application.html.erb
@@ -112,7 +112,9 @@
         <% if signed_in? %>
             <script>
                  $('.nav').slideAndSwipe();
-        
+                 $(document).ready(function(){
+                     //$('.ssm-open-nav').trigger('click');
+                 });
             </script>
 
         <% end %>
