fixing issue where if u start a new game from within the game itself doesn’t track properly and may not add credits

--- a/app/views/games/_sorcerer_m.html.erb
+++ b/app/views/games/_sorcerer_m.html.erb
@@ -17,14 +17,20 @@
        });
 
        $(oMain).on("game_start", function(evt) {
-
+          //alet("game_start");
        });
 
        $(oMain).on("save_score", function(evt,iScore) {
        });
 
        $(oMain).on("restart", function(evt) {
-               //alert("restart");
+          $.ajax({
+            type: "GET",
+            url: "/new_game",
+            success:function(data) {
+              $("#game_token").val(data.token);
+            }
+          }); 
        });
      });
 
