--- a/app/views/games/show_mobile.html.erb
+++ b/app/views/games/show_mobile.html.erb
@@ -9,3 +9,4 @@
 </div>
 
 <input type="hidden" id="game_token" name="game_token" value="<%= session[:game_token] %>" />
+<input type="hidden" id="credits_earned" name="credits_earned" value=0 />
