--- a/app/views/games/show_mobile.html.erb
+++ b/app/views/games/show_mobile.html.erb
@@ -4,7 +4,9 @@
     <% when 'Sorcerer Game' %>
       <%= render 'sorcerer_m' %>
     <% when '2048' %>
-      <%= render 'twentyfortyeight_m' %>      
+      <%= render 'twentyfortyeight_m' %>     
+    <% when 'Black Hole' %>
+      <%= render 'blackhole_m' %>         
   <% end %>
 </div>
 
