--- a/app/views/games/_twentyfortyeight_m.html.erb
+++ b/app/views/games/_twentyfortyeight_m.html.erb
@@ -17,7 +17,7 @@
     }
   </style>
   <div class="gm4html5_div_class" id="gm4html5_div_id">
-  <img src="/assets/2048/splash.png" id="GM4HTML5_loadingscreen" alt="smilegames:HTML5 loading screen" style="display:none;"/>
+ <img src="/assets/2048/splash.png" id="GM4HTML5_loadingscreen" alt="smilegames:HTML5 loading screen" style="display:none;max-width:100vw;max-height:100vh;"/>
       <!-- Create the canvas element the game draws to -->
       <canvas id="canvas" width="525" height="800" style='margin-top:60px;'>
          <p>Your browser doesn't support HTML5 canvas.</p>
