Adding Traffic…credits not working for now

--- a/app/views/games/show_mobile.html.erb
+++ b/app/views/games/show_mobile.html.erb
@@ -6,7 +6,9 @@
     <% when '2048' %>
       <%= render 'twentyfortyeight_m' %>     
     <% when 'Black Hole' %>
-      <%= render 'blackhole_m' %>         
+      <%= render 'blackhole_m' %>   
+    <% when 'Traffic' %>
+      <%= render 'traffic_m' %>             
   <% end %>
 </div>
 
