fixing scroll for mobile

--- a/app/views/games/_traffic_m.html.erb
+++ b/app/views/games/_traffic_m.html.erb
@@ -27,6 +27,7 @@
 		{			
 			// Create new runtime using the c2canvas
 			cr_createRuntime("c2canvas");
+			 window.scrollBy(0,42);
 		});
 		
 		// Pause and resume on page becoming visible/invisible
