--- a/app/views/games/_traffic_m.html.erb
+++ b/app/views/games/_traffic_m.html.erb
@@ -17,6 +17,7 @@
 		
 	</div>
  <script>
+ 		var global_luckee_token = '<%= session[:game_token] %>';
 		// Size the canvas to fill the browser viewport.
 		jQuery(window).resize(function() {
 			cr_sizeCanvas(jQuery(window).width(), jQuery(window).height());
