adding flappy bird

--- a/app/views/games/show_mobile.html.erb
+++ b/app/views/games/show_mobile.html.erb
@@ -8,7 +8,9 @@
     <% when 'Black Hole' %>
       <%= render 'blackhole_m' %>   
     <% when 'Traffic' %>
-      <%= render 'traffic_m' %>             
+      <%= render 'traffic_m' %> 
+    <% when 'Flappy Pilot' %>
+      <%= render 'flappy_pilot_m' %>                   
   <% end %>
 </div>
 
