--- a/app/views/games/show.html.erb
+++ b/app/views/games/show.html.erb
@@ -18,7 +18,9 @@
     <% when 'Sorcerer Game' %>
       <%= render 'sorcerer_m' %>
     <% when '2048' %>
-      <%= render 'twentyfortyeight_m' %>      
+      <%= render 'twentyfortyeight_m' %>  
+    <% when 'Flappy Pilot' %>
+      <%= render 'flappy_pilot_m' %>            
     <% when 'Black Hole' %>
       <%= render 'blackhole_m' %>       
   <% end %>
