--- a/app/views/users/_form_mobile.html.erb
+++ b/app/views/users/_form_mobile.html.erb
@@ -1,7 +1,7 @@
 <div class='mobile-form'>
     <div class="welcome-box-m">Play Games. Earn Cash.</div>
     <%= link_to "/auth/facebook" do %>
-      <%= embedded_svg('svgs/facebook_button.svg', :class => 'facebook-signup') %>
+      <%= image_tag 'facebook_button.png', :class => 'facebook-signup' %>
     <% end %>
     <span class='small-note'>We do not post anything to facebook.</span>
 
@@ -10,7 +10,7 @@
       <div class='left-separator'></div><div class='or-separator'>or</div><div class='right-separator'></div>
     </div>
 
-    <%= embedded_svg('svgs/email_button.svg', :class => 'email-signup') %>
+    <%= image_tag 'email_button.png', :class => 'email-signup' %>
 
     <div class='email-form'>
       <h2> Register with email </h2>
@@ -27,7 +27,6 @@
         
         <%= f.submit "Create my account", class: "btn btn-outlined btn-white btn-lg btn-Create create-email" %>
 
-        <p class="termsOfService">by registering you agree to our <em><b>Privacy Policy</b></em> and <em><b>Terms of Service</b></em></p>
       <% end %>
     </div>
       <div class='sign-in'>
