--- a/app/views/layouts/mobile_application.html.erb
+++ b/app/views/layouts/mobile_application.html.erb
@@ -113,6 +113,13 @@
             <script>
                  $('.nav').slideAndSwipe();
                  $(document).ready(function(){
+                    if(/iPad|iPhone|iPod/.test(navigator.userAgent) && !window.MSStream){
+                      document.querySelector('meta[name=viewport]')
+                        .setAttribute(
+                          'content', 
+                          'initial-scale=1.0001, minimum-scale=1.0001, maximum-scale=1.0001, user-scalable=no'
+                        );
+                    }                    
                      //$('.ssm-open-nav').trigger('click');
                  });
             </script>
