--- a/app/views/static_pages/home_mobile.html.erb
+++ b/app/views/static_pages/home_mobile.html.erb
@@ -3,7 +3,7 @@
 </div>
 <div class='mobile-home-footer'>
 	<div class='footer-links'>
-		<span class='privacy-link'>Privacy Policy </span> 
+		<span class='privacy-link'>Privacy Policy </span>
 		<span class='terms-link'>Terms of Service</span>
 	</div>
 </div>
@@ -12,17 +12,18 @@
     	<%= embedded_svg('svgs/mountains.svg', :class => 'mountains') %>
 	</div>
 	<div class='trees'>
-		<%= embedded_svg('svgs/trees_and_low_hills.svg', :class => 'tree-hills') %>	
+		<%= embedded_svg('svgs/trees_and_low_hills.svg', :class => 'tree-hills') %>
 	</div>
 	<div class='bottom-content'>
+    <%= image_tag 'white_down.png', :class => 'white-down' %>
 			<h2>How it Works </h2>
     		<%= embedded_svg('svgs/bottom_image_1.svg', :class => 'how-it-works-image') %>
     		<p>Play any game to<br/> earn credits</p>
 
       		<%= embedded_svg('svgs/bottom_image_2.svg', :class => 'how-it-works-image') %>
-    		<p>Earn enough<br/> credits to cash <br/> out</p>  	
+    		<p>Earn enough<br/> credits to cash <br/> out</p>
 
       		<%= embedded_svg('svgs/bottom_image_3.svg', :class => 'how-it-works-image') %>
-    		<p>Request a cash out!<br/> We will redeem your <br/> credits and send you <br/> cash within 24 hours.</p>  	    			
+    		<p>Request a cash out!<br/> We will redeem your <br/> credits and send you <br/> cash within 24 hours.</p>
 	</div>
 </div>
