--- a/app/assets/stylesheets/custom_mobile.css.scss
+++ b/app/assets/stylesheets/custom_mobile.css.scss
@@ -1,5 +1,6 @@
 /* mixins, variables, etc. */
 @import "bootstrap";
+@import "mixins";
 
 $grayMediumLight: #eaeaea;
 $dark-font: #4A4A4A;
@@ -52,9 +53,11 @@ textarea {
 }
 .sign-in{
   font-weight: normal;
-  padding: 5px;
-  margin: auto;
-  margin-bottom: 10px;
+  text-align: center;
+  width: 95%;
+  margin-left: 10px;
+  margin-right: 10px;
+  position: relative;
   color: #6f5499;
   font-size: 14px;
   a,a:visited,a:hover{
@@ -72,6 +75,17 @@ textarea {
     margin:auto;
   }
 }
+#session_password,
+#session_email {
+  height: 40px;
+  padding: 0;
+  border-radius: 100px;
+  border: 2px solid #c8ade0;
+  background-color: #ddd8e9;
+  width: 100%;
+  padding-left: 20px;
+}
+
 .facebook-signup{
   width:90%;
   margin:auto;
@@ -104,7 +118,7 @@ textarea {
         font-size:16px;
         width: 100px;
         left: 35px;
-        position: relative;        
+        position: relative;
       }
     }
   }
@@ -119,7 +133,7 @@ textarea {
     }
     input{
       width:90%;
-    } 
+    }
   }
 }
 .mobile-home-footer{
@@ -147,7 +161,7 @@ textarea {
       width:100%;
       z-index:1;
       background:transparent;
-    }  
+    }
   }
   .trees{
     position: absolute;
@@ -181,6 +195,15 @@ textarea {
       margin-top:15px;
       color:#fff;
     }
+  }
+
+  .white-down {
+    position: relative;
+    z-index: 1000;
+    width: 60px;
+    height: auto;
+    right: 0%;
+    bottom: 30px;
   }
 }
 .center {
@@ -255,14 +278,18 @@ p {
   top:-10px;
   width:100%;
   display:block;
+  a:hover {
+    text-decoration: none !important;
+  }
   .back-button{
-    width:35px;
-    height:35px;
+    font-size: 2.25em;
     z-index:1;
     display:inline;
-    top: 6px;
-    left: 10px;
-    position: relative;    
+    color: #fff;
+    position: relative;
+    top: 15px;
+    margin-left: 10px;
+    // @include vertical-align();
   }
   h2{
     font-size:30px;
@@ -341,7 +368,7 @@ p {
 .form-separator{
   position:relative;
   display:block;
-  margin:15px 0px 10px 0px; 
+  margin:15px 0px 10px 0px;
   .left-separator{
     width:40%;
     height:12px;
@@ -364,7 +391,7 @@ p {
     right:15px;
     top:-3px;
     position:absolute;
-  }  
+  }
 }
 
 .mobile-form{
@@ -472,7 +499,7 @@ p {
     }
     svg{
       vertical-align: middle;
-    }    
+    }
 
 }
 /* overlay layer */
@@ -496,9 +523,10 @@ p {
   left: 5%;
 }
 .mobile-menu{
-  fill:#fff;
-  top: -12px;
-  position: relative;  
+  top: -5px;
+  font-size: 2.25em !important;
+  color: #fff;
+  position: relative;
 }
 .game-header{
   width:100%;
