--- a/app/views/layouts/mobile_application.html.erb
+++ b/app/views/layouts/mobile_application.html.erb
@@ -44,7 +44,7 @@
         <script>(function(a,b,c){if(c in b&&b[c]){var d,e=a.location,f=/^(a|html)$/i;a.addEventListener("click",function(a){d=a.target;while(!f.test(d.nodeName))d=d.parentNode;"href"in d&&(d.href.indexOf("http")||~d.href.indexOf(e.host))&&(a.preventDefault(),e.href=d.href)},!1)}})(document,window.navigator,"standalone")</script>
         -->
     </head>
-    <body ondragstart="return false;" ondrop="return false;" >
+    <body ondragstart="return false;" ondrop="return false;" <%= "class=#{@body_class}" if @body_class %>>
         <% if signed_in? %>
         <nav class="nav ssm-nav-visible">
             <h2>Swipe to close this menu.</h2>
@@ -79,6 +79,16 @@
         <% end %>
 
         <div class='mobile-container <% if !signed_in? %>with-money<% end %>' style="width:100%;">
+            <div class="mobile--overlay">
+                <a href="/" class="overlay__opt-out">Preview in Browser</a>
+                <div class="overlay__content">
+                    <img class="overlay__logo" src="/assets/logo-144.png">
+                    <h1 class="overlay__title">Luckee</h1>
+                    <p>To install, tap <img class="overlay__bookmark" src="/assets/bookmark.png"> and choose</p>
+                    <p>"Add to Home Screen"</p>
+                    <i class="overlay__down-arrow ios fa fa-long-arrow-down"></i>
+                </div>
+            </div>
             <% if signed_in? %>
                 <div class='mobile-header'>
                     <% if @game %>
@@ -102,7 +112,7 @@
                     </div>
                 </div>
             <% else %>
-                <h1>Luckee </h1>
+                <h1 class="top-title">Luckee</h1>
             <% end %>
           <% flash.each do |key, value| %>
             <div class="alert alert-<%= key %>"><%= value %></div>
