--- a/app/views/static_pages/home_mobile.html.erb
+++ b/app/views/static_pages/home_mobile.html.erb
@@ -3,8 +3,8 @@
 </div>
 <div class='mobile-home-footer'>
 	<div class='footer-links'>
-		<span class='privacy-link'>Privacy Policy </span>
-		<span class='terms-link'>Terms of Service</span>
+		<a href="/assets/luckee_TOS.pdf"  target="_blank"  class='privacy-link'>Privacy Policy</a>
+		<a href="/assets/luckee_privacy_policy.pdf"  target="_blank"  class='terms-link'>Terms of Service</a>
 	</div>
 </div>
 <div class='home-bottom'>
