--- a/app/assets/stylesheets/custom_mobile.css.scss
+++ b/app/assets/stylesheets/custom_mobile.css.scss
@@ -5,7 +5,11 @@
 $grayMediumLight: #eaeaea;
 $dark-font: #4A4A4A;
 $dark-blue: #10172B;
+$purple: #6f5499;
+$black: #000;
 $credits-red: #D9232B;
+$white: #fff;
+$orange: #F2BB7C;
 
 @mixin box_sizing {
   -moz-box-sizing: border-box;
@@ -45,6 +49,8 @@ body {
     .overlay__content {
       display: block;
       @include vertical-align();
+      font-weight: 200;
+      font-size: 16px;
     }
     .overlay__logo {
       border-radius: 15px;
@@ -53,7 +59,7 @@ body {
     }
     .overlay__title {
       color: #fff;
-      // font-weight: 100;
+      font-weight: 200;
       letter-spacing: 1px;
       display: inline-block;
       border-bottom: 1px solid;
@@ -62,6 +68,7 @@ body {
       display: block;
       width: 30%;
       margin: 0 auto 30px;
+      font-size: 18px;
     }
     .overlay__bookmark {
       width: auto;
@@ -77,7 +84,6 @@ body {
     .overlay__opt-out {
       display: inline-block;
       font-size: 10px;
-      // text-transform: uppercase;
       color: #524E4E;
       position: absolute;
       right: 20px;
@@ -181,7 +187,6 @@ textarea {
   width:85%;
   margin:auto;
   display:block;
-  margin-left: 44px !important;
   margin-bottom: 10px;
 }
 .email-signup{
@@ -230,7 +235,10 @@ textarea {
   }
 }
 .mobile-home-footer{
+  margin-top: 20px;
   width:100%;
+  position: relative;
+  z-index: 10;
   .footer-links{
     text-align:center;
     color:#ABABAB;
@@ -239,6 +247,14 @@ textarea {
     .privacy-link{
       margin-right:30px;
     }
+  }
+}
+.terms-link,
+.privacy-link {
+  color: rgb(171, 171, 171);
+  &:hover {
+    text-decoration: none;
+    color: $purple;
   }
 }
 .home-bottom{
@@ -305,11 +321,26 @@ textarea {
     margin-bottom: 10px;
   }
 }
+.redeemHeading,
+.redeemCredits {
+  padding: 15px;
+  background-color: $white;
+  font-size:12px;
+}
+.redeemCredits__title {
+  border-bottom: 1px solid $orange;
+  margin-bottom: 15px;
+  font-size: 15px;
+}
+.redeemCredits__link {
+  text-align: center;
+  background-color: #ecf0f1;
+  padding: 30px;
+  color: $dark-blue;
+  margin-bottom: 0;
+}
 .my-balance{
-  height:80px;
-  padding:20px;
-  font-size:18px;
-  background:#fff;
+
   .icon-holder{
     position:relative;
     width:25%;
@@ -325,13 +356,9 @@ textarea {
   .credits{
     color:$credits-red;
   }
-  .redeemCredits{
-    font-size:20px;
-  }
   .text-holder{
     display:inline-block;
   }
-  border-bottom:1px solid $dark-font;
   .p{
     font-size:16px;
   }
@@ -641,8 +668,51 @@ p {
   position: absolute;
   top: 0px;
   text-align: center;
-  width: 100%;
-  left: 0px;
+  width: 140%;
 }
 
 
+.share-dialog {
+  position: absolute;
+  margin: 0 -100px;
+  top: 60px;
+  background-color: rgba(255, 255, 255, 0.95);
+  border-radius: 5px;
+  padding: 30px 20px 10px;
+  right: 100px;
+  display: none;
+
+  &.show {
+    display: block;
+  }
+
+  .arrow-up {
+    width: 0;
+    height: 0;
+    border-left: 10px solid transparent;
+    border-right: 10px solid transparent;
+    border-bottom: 10px solid rgba(255,255,255,0.95);
+    position: absolute;
+    top: -10px;
+    right: 14px;
+  }
+
+  .share-dialog__close-container {
+    text-align: center;
+  }
+
+  .share-dialog__close {
+      color: black;
+      text-transform: uppercase;
+      font-size: 10px;
+      text-decoration: underline;
+      font-weight: 500;
+    &:hover {
+      cursor: pointer;
+    }
+  }
+
+  span {
+    color: red;
+  }
+}
